objects/AgileVizArt__Configuration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Defines basic configuration properties for your agile project management</description>
    <fields>
        <fullName>AgileVizArt__Description__c</fullName>
        <inlineHelpText>DO NOT CHANGE</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Domain__c</fullName>
        <inlineHelpText>Defines list of values for this setting. DO NOT CHANGE.</inlineHelpText>
        <label>Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Value__c</fullName>
        <inlineHelpText>Enter configuration value.</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Configuration</label>
</CustomObject>